--- a/WebUI/WebUI.csproj
+++ b/WebUI/WebUI.csproj
@@ -10,4 +10,9 @@
       <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <_ContentIncludedByDefault Remove="wwwroot\css\libs\sanitize.css" />
+      <_ContentIncludedByDefault Remove="wwwroot\css\libs\style.css" />
+    </ItemGroup>
+
 </Project>
