--- a/WebUI/appsettings.json
+++ b/WebUI/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "LocalDb": "Server=DESKTOP-N96A4PM;Database=CinemaDB;Integrated Security=True;Encrypt=False;TrustServerCertificate=False;Connect Timeout=10;"
+    "LocalDb": "Server=ARSARS;Database=CinemaDB;Integrated Security=True;Encrypt=False;TrustServerCertificate=False;Connect Timeout=10;"
   }
 }
